src/assets/css/tailwindcss.css
/* ... */
.visible {
  visibility: visible;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.z-10 {
  z-index: 10;
}

.z-\[100\] {
  z-index: 100;
}

.z-\[10\] {
  z-index: 10;
}

.z-\[50\] {
  z-index: 50;
}

.z-\[5\] {
  z-index: 5;
}

.m-\[-2\%\] {
  margin: -2%;
}

.m-0 {
  margin: 0px;
}

.mx-0 {
  margin-left: 0px;
  margin-right: 0px;
}

.mb-1 {
  margin-bottom: 0.25rem;
}

.ml-2 {
  margin-left: 0.5rem;
}

.ml-5 {
  margin-left: 1.25rem;
}

.mr-1 {
  margin-right: 0.25rem;
}

.mr-3 {
  margin-right: 0.75rem;
}

.mt-10 {
  margin-top: 2.5rem;
}

.mt-6 {
  margin-top: 1.5rem;
}

.mt-8 {
  margin-top: 2rem;
}

.mt-auto {
  margin-top: auto;
}

.mr-2 {
  margin-right: 0.5rem;
}

.mr-2\.5 {
  margin-right: 0.625rem;
}

.mt-7 {
  margin-top: 1.75rem;
}

.mt-3 {
  margin-top: 0.75rem;
}

.mt-12 {
  margin-top: 3rem;
}

.mb-3 {
  margin-bottom: 0.75rem;
}

.mb-24 {
  margin-bottom: 6rem;
}

.line-clamp-3 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.line-clamp-5 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 5;
}

.block {
  display: block;
}

.inline {
  display: inline;
}

.flex {
  display: flex;
}

.contents {
  display: contents;
}

.hidden {
  display: none;
}

.h-\[\.5px\] {
  height: .5px;
}

.h-\[110\%\] {
  height: 110%;
}

.h-\[213px\] {
  height: 213px;
}

.h-\[400px\] {
  height: 400px;
}

.h-\[40px\] {
  height: 40px;
}

.h-full {
  height: 100%;
}

.h-\[20px\] {
  height: 20px;
}

.min-h-\[17px\] {
  min-height: 17px;
}

.w-\[110\%\] {
  width: 110%;
}

.w-\[140px\] {
  width: 140px;
}

.w-\[250px\] {
  width: 250px;
}

.w-\[450px\] {
  width: 450px;
}

.w-full {
  width: 100%;
}

.w-\[300px\] {
  width: 300px;
}

.w-\[\.5px\] {
  width: .5px;
}

.min-w-\[17px\] {
  min-width: 17px;
}

.flex-1 {
  flex: 1 1 0%;
}

.transform {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.cursor-pointer {
  cursor: pointer;
}

.select-none {
  -webkit-user-select: none;
     -moz-user-select: none;
          user-select: none;
}

.resize {
  resize: both;
}

.list-none {
  list-style-type: none;
}

.flex-row {
  flex-direction: row;
}

.flex-col {
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.gap-2 {
  gap: 0.5rem;
}

.gap-2\.5 {
  gap: 0.625rem;
}

.gap-3 {
  gap: 0.75rem;
}

.gap-3\.5 {
  gap: 0.875rem;
}

.gap-4 {
  gap: 1rem;
}

.gap-5 {
  gap: 1.25rem;
}

.gap-7 {
  gap: 1.75rem;
}

.gap-8 {
  gap: 2rem;
}

.gap-6 {
  gap: 1.5rem;
}

.overflow-hidden {
  overflow: hidden;
}

.overflow-y-auto {
  overflow-y: auto;
}

.whitespace-nowrap {
  white-space: nowrap;
}

.rounded-\[10px\] {
  border-radius: 10px;
}

.rounded-\[15px\] {
  border-radius: 15px;
}

.rounded-md {
  border-radius: 0.375rem;
}

.rounded-\[5px\] {
  border-radius: 5px;
}

.border-\[0\.5px\] {
  border-width: 0.5px;
}

.border-b-\[\.5px\] {
  border-bottom-width: .5px;
}

.border-b-\[0\.5px\] {
  border-bottom-width: 0.5px;
}

.border-r-\[0\.5px\] {
  border-right-width: 0.5px;
}

.border-\[rgba\(0\2c 0\2c 0\2c 0\.1\)\] {
  border-color: rgba(0,0,0,0.1);
}

.bg-\[\#121212\] {
  --tw-bg-opacity: 1;
  background-color: rgb(18 18 18 / var(--tw-bg-opacity));
}

.bg-\[\#141414\] {
  --tw-bg-opacity: 1;
  background-color: rgb(20 20 20 / var(--tw-bg-opacity));
}

.bg-\[rgba\(0\2c 0\2c 0\2c \.7\)\] {
  background-color: rgba(0,0,0,.7);
}

.bg-\[rgba\(0\2c 0\2c 0\2c \.8\)\] {
  background-color: rgba(0,0,0,.8);
}

.bg-black {
  --tw-bg-opacity: 1;
  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
}

.bg-black\/90 {
  background-color: rgb(0 0 0 / 0.9);
}

.bg-white {
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}

.bg-\[\#F3F3F3\] {
  --tw-bg-opacity: 1;
  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
}

.bg-transparent {
  background-color: transparent;
}

.bg-\[\#f3f3f3\] {
  --tw-bg-opacity: 1;
  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
}

.bg-cover {
  background-size: cover;
}

.bg-center {
  background-position: center;
}

.fill-\[\#717171\] {
  fill: #717171;
}

.fill-black {
  fill: #000;
}

.fill-white {
  fill: #fff;
}

.stroke-\[\#717171\] {
  stroke: #717171;
}

.stroke-\[\#AAAAAA\] {
  stroke: #AAAAAA;
}

.stroke-black {
  stroke: #000;
}

.stroke-white {
  stroke: #fff;
}

.p-0 {
  padding: 0px;
}

.p-5 {
  padding: 1.25rem;
}

.p-6 {
  padding: 1.5rem;
}

.p-7 {
  padding: 1.75rem;
}

.p-8 {
  padding: 2rem;
}

.px-10 {
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}

.px-5 {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

.px-\[30px\] {
  padding-left: 30px;
  padding-right: 30px;
}

.py-2 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.py-2\.5 {
  padding-top: 0.625rem;
  padding-bottom: 0.625rem;
}

.py-5 {
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}

.py-6 {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}

.py-8 {
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.px-6 {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.py-4 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.py-7 {
  padding-top: 1.75rem;
  padding-bottom: 1.75rem;
}

.px-7 {
  padding-left: 1.75rem;
  padding-right: 1.75rem;
}

.px-0 {
  padding-left: 0px;
  padding-right: 0px;
}

.pt-7 {
  padding-top: 1.75rem;
}

.pb-7 {
  padding-bottom: 1.75rem;
}

.pt-2 {
  padding-top: 0.5rem;
}

.pt-2\.5 {
  padding-top: 0.625rem;
}

.text-center {
  text-align: center;
}

.\!text-\[14px\] {
  font-size: 14px !important;
}

.\!text-\[16px\] {
  font-size: 16px !important;
}

.\!text-\[24px\] {
  font-size: 24px !important;
}

.text-\[13px\] {
  font-size: 13px;
}

.text-\[15px\] {
  font-size: 15px;
}
/* ... */

